<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textRed"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="100dp"
	        android:background="@android:color/holo_red_light"
	        android:textColor="@android:color/white"
	        android:textSize="16sp"
	        android:layout_height="wrap_content"
         	android:text="@string/red" />
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content" />
	    <SeekBar
		        android:id="@+id/seekBarRed"
		        android:max="255"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
	</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textGreen"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="100dp"
	        android:background="@android:color/holo_green_light"
	        android:textColor="@android:color/white"
	        android:textSize="16sp"
	        android:layout_height="wrap_content"
         	android:text="@string/green" />
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content" />
	    <SeekBar
	        android:id="@+id/seekBarGreen"
	        android:max="255"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textBlue"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="100dp"
	        android:background="@android:color/holo_blue_light"
	        android:textColor="@android:color/white"
	        android:textSize="16sp"
	        android:layout_height="wrap_content"
         	android:text="@string/blue" />
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content" />
	    <SeekBar
	        android:id="@+id/seekBarBlue"
	        android:max="255"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/textIntensity"
	        android:layout_gravity="center"
	        android:layout_width="100dp"
	        android:textSize="16sp"
	        android:layout_height="wrap_content"
         	android:text="@string/intensity" />   
	    <Space
	        android:layout_width="20dp"
	        android:layout_height="wrap_content" />
	    <SeekBar
	        android:id="@+id/seekBarIntensity"
	        android:max="100"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"/>
    </LinearLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    
	<Button
	        android:id="@+id/buttonSend"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/send" />
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="10dp"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/buttonStartBLE"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/startBLE" />	    
	    <Button
	        android:id="@+id/buttonStopBLE"
	        android:layout_gravity="center"
	        android:padding="3dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/stopBLE" />
	</LinearLayout>
    
    <TextView
        android:id="@+id/colourSample"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="" />
    

</LinearLayout>

